Fix toolbar overlap with router outlet

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -36,7 +36,7 @@
     }
 
     #outlet {
-        margin-top: 50px;
+        margin-top: 56px;
     }
 }
 
